# devsim

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  BUILD.md  CHANGES.md  CITATION.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL  INSTALL.md  NOTICE  README  README.md  RELEASE  TEST.md  appveyor.yml  centos_5.cmake  ext_notes  install.py  linux.txt  macos.txt  osx_10.10.cmake  osx_10.9.cmake  redhat_6.4.cmake  ruff.toml  win32.cmake  windows.txt
src/: CMakeLists.txt  doxyfile
src/AutoEquation/: CMakeLists.txt  DefaultDerivatives.cc  DefaultDerivatives.hh  EdgeExprModel.cc  EdgeExprModel.hh  EquationFunctions.cc  EquationFunctions.hh  ExprContactEquation.cc  ExprContactEquation.hh  ExprEquation.cc  ExprEquation.hh  InterfaceExprEquation.cc  InterfaceExprEquation.hh  InterfaceModelExprData.cc  InterfaceModelExprData.hh  InterfaceModelExprEval.cc  InterfaceModelExprEval.hh  InterfaceNodeExprModel.cc  InterfaceNodeExprModel.hh  ModelExprData.cc  ModelExprData.hh  ModelExprEval.cc  ModelExprEval.hh  NodeExprModel.cc  NodeExprModel.hh  ObjectCache.hh  TetrahedronEdgeExprModel.cc  TetrahedronEdgeExprModel.hh  TriangleEdgeExprModel.cc  TriangleEdgeExprModel.hh
src/Circuit/: CMakeLists.txt
src/Data/: CMakeLists.txt  GlobalData.cc  GlobalData.hh  MaterialDB.cc  MaterialDB.hh  MaterialDBEntry.cc  MaterialDBEntry.hh
src/Equation/: CMakeLists.txt  ContactEquation.cc  ContactEquation.hh  ContactEquationHolder.cc  ContactEquationHolder.hh  Equation.cc  Equation.hh  EquationHolder.cc  EquationHolder.hh  InterfaceEquation.cc  InterfaceEquation.hh  InterfaceEquationHolder.cc  InterfaceEquationHolder.hh
src/GeomModels/: AtContactNode.cc  AtContactNode.hh  AverageEdgeModel.cc  AverageEdgeModel.hh  CMakeLists.txt  CylindricalEdgeCouple.cc  CylindricalEdgeCouple.hh  CylindricalEdgeNodeVolume.cc  CylindricalEdgeNodeVolume.hh  CylindricalNodeVolume.cc  CylindricalNodeVolume.hh  CylindricalSurfaceArea.cc  CylindricalSurfaceArea.hh  EdgeCouple.cc  EdgeCouple.hh  EdgeIndex.cc  EdgeIndex.hh  EdgeInverseLength.cc  EdgeInverseLength.hh  EdgeLength.cc  EdgeLength.hh  EdgeNodeVolume.cc  EdgeNodeVolume.hh  InterfaceNormal.cc  InterfaceNormal.hh  ModelCreate.cc  ModelCreate.hh  NodePosition.cc  NodePosition.hh  NodeVolume.cc  NodeVolume.hh  SurfaceArea.cc  SurfaceArea.hh  SurfaceAreaUtil.cc  SurfaceAreaUtil.hh  TetrahedronEdgeCouple.cc  TetrahedronEdgeCouple.hh  TetrahedronNodeVolume.cc  TetrahedronNodeVolume.hh  TriangleCylindricalEdgeCouple.cc  (+11 more)
src/Geometry/: CMakeLists.txt  Contact.cc  Contact.hh  Coordinate.cc  Coordinate.hh  Device.cc  Device.hh  DeviceInstantiate.cc  Edge.cc  Edge.hh  EdgeData.hh  GeometryStream.cc  GeometryStream.hh  GradientField.cc  GradientField.hh  Interface.cc  Interface.hh  IterHelper.hh  Node.cc  Node.hh  Permutation.cc  Permutation.hh  Region.cc  Region.hh  RegionInstantiate.cc  Tetrahedron.cc  Tetrahedron.hh  TetrahedronElementField.cc  TetrahedronElementField.hh  Triangle.cc  Triangle.hh  TriangleElementField.cc  TriangleElementField.hh  Vector.cc  Vector.hh
src/MathEval/: AdditionalMath.hh  Bernoulli.cc  Bernoulli.hh  CMakeLists.txt  Fermi.cc  Fermi.hh  GaussFermi.cc  GaussFermi.hh  LogicalMath.hh  MathEval.cc  MathEval.hh  MathPacket.cc  MathPacket.hh  MathWrapper.cc  MathWrapper.hh  MiscMathFunc.cc  MiscMathFunc.hh  kahan.cc  kahan.hh
src/adiff/: CMakeLists.txt  EquationObject.cc  EquationObject.hh  LogicalFunc.cc  LogicalFunc.hh  UserFunc.cc  UserFunc.hh  gcd.cc  mcModel.cc  mcModel.hh  mcModelCompiler.cc  mcModelCompiler.hh  mcParser.y  mcScanner.l  mcTest.cc  mcTest.hh  test.hh
src/commands/: CMakeLists.txt  CheckFunctions.cc  CheckFunctions.hh  CircuitCommands.cc  CircuitCommands.hh  EquationCommands.cc  EquationCommands.hh  GeometryCommands.cc  GeometryCommands.hh  MaterialCommands.cc  MaterialCommands.hh  MathCommands.cc  MathCommands.hh  MeshingCommands.cc  MeshingCommands.hh  ModelCommands.cc  ModelCommands.hh  Validate.cc  Validate.hh  dsCommand.hh
src/common_api/: CommandHandler.hh  CommandHandlerCommon.cc  ControlGIL.hh  DevsimImport.hh  GetArgsCommon.cc  Interpreter.hh  ObjectHolder.hh  OutputStream.hh  ZlibCompress.hh  dsTimer.hh  import.hh  mycondition.hh  mymutex.hh  threadBaseClass.hh
src/errorSystem/: CMakeLists.txt  EquationErrors.cc  EquationErrors.hh  ErrorHelpers.cc  ErrorHelpers.hh  GeneralErrors.cc  GeneralErrors.hh  ModelErrors.cc  ModelErrors.hh
src/main/: CMakeLists.txt  ResetAllData.cc  ResetAllData.hh  devsim.cc  devsim_py.cc  devsim_tcl.cc
src/math/: BlasHeaders.cc  BlasHeaders.hh  BlockPreconditioner.cc  BlockPreconditioner.hh  CMakeLists.txt  CompressedMatrix.cc  CompressedMatrix.hh  DenseMatrix.cc  DenseMatrix.hh  DirectLinearSolver.cc  DirectLinearSolver.hh  ExternalPreconditioner.cc  ExternalPreconditioner.hh  IterativeLinearSolver.cc  IterativeLinearSolver.hh  LinearSolver.cc  LinearSolver.hh  MKLPardisoPreconditioner.cc  MKLPardisoPreconditioner.hh  MathEnum.cc  MathEnum.hh  Matrix.cc  Matrix.hh  MatrixEntries.hh  Newton.cc  Newton.hh  Preconditioner.cc  Preconditioner.hh  SolverUtil.cc  SolverUtil.hh  SuperLUData.cc  SuperLUData.hh  SuperLUDataZ.cc  SuperLUPreconditioner.cc  SuperLUPreconditioner.hh  TimeData.cc  TimeData.hh  dsMathTypes.hh  gmres.cc  gmres.hh
src/meshing/: CMakeLists.txt  DevsimLoader.cc  DevsimLoader.hh  DevsimParser.y  DevsimReader.cc  DevsimReader.hh  DevsimRestartWriter.cc  DevsimRestartWriter.hh  DevsimScanner.l  DevsimWriter.cc  DevsimWriter.hh  Devsimyystype.hh  FloodsWriter.cc  FloodsWriter.hh  GeniusLoader.cc  GeniusLoader.hh  GeniusReader.cc  GeniusReader.hh  GmshLoader.cc  GmshLoader.hh  GmshParser.y  GmshReader.cc  GmshReader.hh  GmshScanner.l  Gmshyystype.hh  Mesh.cc  Mesh.hh  Mesh1d.cc  Mesh1d.hh  Mesh1dStructs.cc  Mesh1dStructs.hh  Mesh2d.cc  Mesh2d.hh  Mesh2dStructs.cc  Mesh2dStructs.hh  MeshKeeper.cc  MeshKeeper.hh  MeshLoaderStructs.cc  MeshLoaderStructs.hh  MeshLoaderUtility.cc  (+9 more)
src/models/: CMakeLists.txt  EdgeFromNodeModel.cc  EdgeFromNodeModel.hh  EdgeModel.cc  EdgeModel.hh  EdgeModelInstantiate.cc  EdgeScalarData.cc  EdgeScalarData.hh  (+61 more)
(+742 files in other folders)
