PROJECT (DEVSIM CXX)
OPTION(VTKWRITER    "Build with VTK Writer" ON)
OPTION(PYTHON3      "Build Python 3 Interpreter" ON)
OPTION(DEVSIM_EXTENDED_PRECISION "Build with extended precision" OFF)
OPTION(MKL_PARDISO  "Build with MKL Pardiso" OFF)


set (CMAKE_CXX_STANDARD 14)

INCLUDE(${PROJECT_SOURCE_DIR}/cmake/${DEVSIM_CONFIG}.cmake)
INCLUDE(${PROJECT_SOURCE_DIR}/local.cmake OPTIONAL)

ADD_DEFINITIONS(-DDEVSIM_VERSION_STRING="\\"1.4.5\\"")
ADD_DEFINITIONS(-DDEVSIM_COPYRIGHT_YEAR="\\"2009-2019\\"")

IF (DEVSIM_EXTENDED_PRECISION)
INCLUDE_DIRECTORIES(${BOOST_INCLUDE})
ADD_DEFINITIONS(-DDEVSIM_EXTENDED_PRECISION)
ENDIF (DEVSIM_EXTENDED_PRECISION)

SET (SUBDIRS
    src
    testing
)

SITE_NAME(HOSTNAME)
MESSAGE("Hostname: ${HOSTNAME}")

ENABLE_TESTING()
FOREACH (SUB ${SUBDIRS})
    ADD_SUBDIRECTORY(${SUB})
ENDFOREACH (SUB ${SUBDIRS})

