PROJECT (DEVSIM CXX)
cmake_minimum_required(VERSION 3.9)

OPTION(VTKWRITER    "Build with VTK Writer" ON)
OPTION(PYTHON3      "Build Python 3 Interpreter" ON)
OPTION(DEVSIM_EXTENDED_PRECISION "Build with extended precision" OFF)
OPTION(DEVSIM_CPP_BIN_FLOAT "Build with boost quadmath emulation" OFF)
OPTION(MKL_PARDISO  "Build with MKL Pardiso" OFF)
OPTION(EXPLICIT_MATH_LOAD  "Explicit linking of math libraries" ON)
OPTION(EIGEN_DENSE "Use eigen for the dense matrix in extended precision" OFF)


set (CMAKE_CXX_STANDARD 17)

INCLUDE(${PROJECT_SOURCE_DIR}/cmake/${DEVSIM_CONFIG}.cmake)
INCLUDE(${PROJECT_SOURCE_DIR}/local.cmake OPTIONAL)

#also change this in setup.cfg
ADD_DEFINITIONS(-DDEVSIM_VERSION_STRING=\"2.3.0-rc3\")
ADD_DEFINITIONS(-DDEVSIM_COPYRIGHT_YEAR=\"2009-2022\")

IF (MKL_PARDISO)
ADD_DEFINITIONS(-DUSE_MKL_PARDISO)
ENDIF (MKL_PARDISO)

IF (EXPLICIT_MATH_LOAD)
ADD_DEFINITIONS(-DUSE_EXPLICIT_MATH_LOAD)
ENDIF()

IF (VTKWRITER)
ADD_DEFINITIONS(-DVTKWRITER)
ENDIF (VTKWRITER)

IF (EIGEN_DENSE)
ADD_DEFINITIONS(-DUSE_EIGEN)
ENDIF()

IF (DEVSIM_CPP_BIN_FLOAT)
ADD_DEFINITIONS(-DUSE_CPP_BIN_FLOAT)
ENDIF()

IF (DEVSIM_CPP_BIN_FLOAT AND NOT EIGEN_DENSE)
MESSAGE(FATAL_ERROR "CANNOT HAVE DEVSIM_CPP_BIN_FLOAT without EIGEN_DENSE")
ENDIF()



INCLUDE_DIRECTORIES(${BOOST_INCLUDE})
IF (DEVSIM_EXTENDED_PRECISION)
ADD_DEFINITIONS(-DDEVSIM_EXTENDED_PRECISION)
ENDIF (DEVSIM_EXTENDED_PRECISION)

SET (SUBDIRS
    src
    testing
)

SITE_NAME(HOSTNAME)
MESSAGE("Hostname: ${HOSTNAME}")

ENABLE_TESTING()
FOREACH (SUB ${SUBDIRS})
    ADD_SUBDIRECTORY(${SUB})
ENDFOREACH (SUB ${SUBDIRS})

